--- a/package.json
+++ b/package.json
@@ -29,8 +29,11 @@
   },
   "dependencies": {
     "gatsby": "^2.13.73",
+    "gatsby-plugin-sass": "^2.1.13",
+    "node-sass": "^4.12.0",
     "react": "^16.9.0",
-    "react-dom": "^16.9.0"
+    "react-dom": "^16.9.0",
+    "sanitize.css": "^11.0.0"
   },
   "devDependencies": {
     "@dcrtantuco/eslint-config": "^1.0.2",
