--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
   },
   "dependencies": {
     "gatsby": "^2.13.73",
+    "gatsby-plugin-react-helmet": "^3.1.6",
     "gatsby-plugin-sass": "^2.1.13",
     "modularscale-sass": "^3.0.8",
     "node-sass": "^4.12.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-helmet": "^5.2.1",
     "sanitize.css": "^11.0.0"
   },
   "devDependencies": {
