--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "gatsby": "^2.13.73",
+    "gatsby-plugin-postcss": "^2.1.6",
     "gatsby-plugin-react-helmet": "^3.1.6",
     "gatsby-plugin-sass": "^2.1.13",
     "modularscale-sass": "^3.0.8",
