Updates due to github username change

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dcrtantuco.github.io",
+  "name": "darwintantuco.github.io",
   "private": true,
   "description": "My personal website",
   "version": "0.1.0",
