--- a/package.json
+++ b/package.json
@@ -40,15 +40,10 @@
     "sanitize.css": "^11.0.0"
   },
   "devDependencies": {
-    "@darwintantuco/eslint-config": "^1.0.0",
-    "@darwintantuco/prettier-config": "^1.0.0",
-    "@darwintantuco/stylelint-config": "^1.0.0",
-    "eslint": "^6.8.0",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.19.0",
-    "gh-pages": "^2.1.1",
-    "prettier": "^1.19.1",
-    "stylelint": "^13.2.1"
+    "@darwintantuco/eslint-config": "^1.0.1",
+    "@darwintantuco/prettier-config": "^1.0.1",
+    "@darwintantuco/stylelint-config": "^1.0.1",
+    "gh-pages": "^2.1.1"
   },
   "repository": {
     "type": "git",
