--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "deploy": "gatsby build && gh-pages -d public -b master",
-    "prettier:check": "prettier --list-different \"**/*.{scss,js,json,md}\"",
-    "prettier:fix": "prettier --write \"**/*.{scss,js,json,md}\"",
-    "lint:js": "eslint 'src/**/*.js'",
+    "prettier:check": "prettier --list-different \"**/*.{scss,ts,tsx,json,md}\"",
+    "prettier:fix": "prettier --write \"**/*.{scss,ts,tsx,json,md}\"",
+    "lint:js": "eslint 'src/**/*.{ts,tsx}'",
     "lint:css": "stylelint 'src/**/*.{css,scss}'"
   },
   "dependencies": {
@@ -31,6 +31,7 @@
     "gatsby-plugin-postcss": "^2.1.6",
     "gatsby-plugin-react-helmet": "^3.1.6",
     "gatsby-plugin-sass": "^2.1.13",
+    "gatsby-plugin-typescript": "^2.3.1",
     "modularscale-sass": "^3.0.8",
     "node-sass": "^4.12.0",
     "react": "^16.9.0",
