--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@darwintantuco/eslint-config": "^1.0.1",
     "@darwintantuco/prettier-config": "^1.0.1",
     "@darwintantuco/stylelint-config": "^1.0.1",
+    "@types/react-helmet": "^5.0.15",
     "gh-pages": "^2.1.1"
   },
   "repository": {
