--- a/package.json
+++ b/package.json
@@ -32,12 +32,10 @@
     "gatsby-plugin-react-helmet": "^3.1.6",
     "gatsby-plugin-sass": "^2.1.13",
     "gatsby-plugin-typescript": "^2.3.1",
-    "modularscale-sass": "^3.0.8",
     "node-sass": "^4.12.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-helmet": "^5.2.1",
-    "sanitize.css": "^11.0.0"
+    "react-helmet": "^5.2.1"
   },
   "devDependencies": {
     "@darwintantuco/eslint-config": "^1.0.2",
