--- a/package.json
+++ b/package.json
@@ -28,16 +28,13 @@
   },
   "dependencies": {
     "gatsby": "^2.13.73",
-    "gatsby-plugin-postcss": "^2.1.6",
+    "gatsby-plugin-postcss": "^3.2.0",
     "gatsby-plugin-react-helmet": "^3.1.6",
-    "gatsby-plugin-sass": "^2.1.13",
     "gatsby-plugin-typescript": "^2.3.1",
-    "modularscale-sass": "^3.0.8",
-    "node-sass": "^4.12.0",
+    "postcss": "^8.1.8",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-helmet": "^5.2.1",
-    "sanitize.css": "^11.0.0"
+    "react-helmet": "^5.2.1"
   },
   "devDependencies": {
     "@darwintantuco/eslint-config": "^1.0.2",
@@ -45,7 +42,8 @@
     "@darwintantuco/stylelint-config": "^1.0.2",
     "@types/react-helmet": "^5.0.15",
     "husky": "^4.2.5",
-    "npm-run-all": "^4.1.5"
+    "npm-run-all": "^4.1.5",
+    "tailwindcss": "^2.0.1"
   },
   "repository": {
     "type": "git",
